# nemo-platform

./: .agent-improver.yml  .coderabbit.yaml  .copyrightignore  .dockerignore  .gitattributes  .gitignore  .golangci.yml  .mcp.json  .pre-commit-config.yaml  .pulse-trufflehog-allowlist.json  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile.agentic-base  LICENSE  Makefile  NOTICE  README.md  RELEASING.md  REUSE.toml  SETUP.md  TESTING.md  conftest.py  docker-bake.hcl  mkdocs.yml  pyproject.toml  pytest.ini  renovate.json  ruff.toml
.flox/: env.json
plugins/nemo-deployments/: README.md  pyproject.toml
plugins/nemo-deployments/openapi/: openapi.yaml
plugins/nemo-deployments/src/nemo_deployments_plugin/: config.py  constants.py  controller.py  entities.py  references.py  schema.py  service.py  types.py  validation.py
plugins/nemo-deployments/src/nemo_deployments_plugin/api/v2/: dependencies.py  deployment_configs.py  deployments.py  status.py  volumes.py
plugins/nemo-deployments/src/nemo_deployments_plugin/backends/: base.py  registry.py
plugins/nemo-deployments/src/nemo_deployments_plugin/backends/docker/: backend.py  config.py  containers.py  gpu.py  labels.py  ports.py  probes.py  status.py  volumes.py
plugins/nemo-deployments/src/nemo_deployments_plugin/reconciler/: deployment_reconciler.py  drift_recovery.py  entity_client.py  orphan_cleanup.py  prerequisite.py  volume_mounts.py  volume_reconciler.py
plugins/nemo-deployments/tests/integration/: conftest.py  docker_availability.py  integration_helpers.py  test_reconcile_docker.py
plugins/nemo-deployments/tests/integration/backends/docker/: test_docker_backend.py
plugins/nemo-deployments/tests/unit/: helpers.py  test_api_deployment_configs.py  test_api_deployments.py  test_api_status.py  test_api_volumes.py  test_config.py  test_entities.py  test_prerequisite_validation.py  test_references.py  test_registry.py  test_service_startup.py
plugins/nemo-deployments/tests/unit/reconciler/: conftest.py  test_controller.py  test_deployment_reconciler.py  test_drift_recovery.py  test_entity_client.py  test_prerequisite.py  test_volume_mounts.py  test_volume_reconciler.py
services/customizer/: README.md  pyproject.toml
services/customizer/docs/: automodel_errors.md  megatron_bridge.md  rl.md
services/customizer/src/nmp/customizer/: __init__.py  config.py  main.py  platform_client.py  service.py  utils.py
services/customizer/tests/: conftest.py  constants.py  test_compiler.py  test_job_context.py  test_job_schemas.py  test_platform_client.py  test_service.py  test_validators.py
services/customizer/tests/integration/: test_customizer.py  test_file_io_task.py  test_model_entity_task.py
services/customizer/tests/tasks/file_io/: test_callbacks.py  test_file_io.py  test_progress_reporter.py
services/customizer/tests/tasks/model_entity/: test_model_entity.py
services/customizer/tests/tasks/training/: README.md  test_datasets.py  test_distributed.py  test_errors.py  test_integrations.py  test_mlflow_api_surface.py  test_progress.py  test_runner.py
services/intake/: .dockerignore  README.md  alembic.ini  mypy.ini  pyproject.toml  pytest.ini
services/intake/alembic/: env.py
services/intake/alembic/versions/: 2025_10_14_1101-a7e3b1e7355b_initial_migration.py
services/intake/examples/: send_langchain_openinference_agent.py  send_nemo_flow_openinference_agent.py  send_otel_sample.py
services/intake/scripts/: README.md  __init__.py  generate_test_dataset.py  init-multiple-dbs.sh  load_test_data.py  seed-entries.py
services/intake/scripts/spans/: run_clickhouse.sh  seed_experiment_rollup_data.py  seed_experiments_demo.py  seed_span_type_showcase.py
services/intake/src/nmp/intake/: __init__.py  config.py  main.py  service.py
services/intake/tests/: conftest.py  test_apps.py  test_atif_v17.py  test_clickhouse_startup.py  test_entries.py  test_experiment_metric_filter.py  test_experiment_rollup_repository.py  test_export_utils.py  test_exports.py  test_sdk_basic.py  test_spans_clickhouse_client.py  test_spans_clickhouse_migrations.py  test_spans_clickhouse_repository.py  test_spans_otlp.py  test_spans_schemas.py  test_spans_span_attribute_catalog.py  test_spans_storage.py  test_tasks.py  test_traces_clickhouse_repository.py  test_values.py
services/intake/tests/data/: action_heavy.json  all_entries.json  conversations.json  feedback_heavy.json  single_turns.json
services/intake/tests/integration/: test_experiments_crud.py  test_intake.py
services/intake/tests/integration/spans/: conftest.py  test_atif_ingest.py  test_chat_completions_ingest.py  test_clickhouse_bootstrap.py  test_evaluator_results_atif.py  test_evaluator_results_crud.py  test_evaluator_results_filters.py  test_evaluator_results_loose_target.py  test_experiment_metric_sort.py  test_experiment_rollups.py  test_experiment_sessions.py  test_otlp_ingest_complex.py  test_otlp_ingest_limits.py  test_otlp_ingest_messages.py  test_otlp_ingest_simple.py  test_spans_read_filters.py  test_traces_read.py
services/jailbreak-detect/: Dockerfile  README.md  pyproject.toml
services/jailbreak-detect/deploy/: deployment-config.json
services/jailbreak-detect/model/: classifier.py  server.py
services/jailbreak-detect/scripts/: eval.py  eval_dataset.jsonl
services/jailbreak-detect/tests/: conftest.py  test_classifier.py  test_server.py
services/safe-synthesizer/: .dockerignore  Makefile  README.md  pyproject.toml
services/safe-synthesizer/fixes/cve-2025-8194/: tarfile.py.fix
services/safe-synthesizer/scripts/: setup_model_filesets.py
services/safe-synthesizer/src/nmp/safe_synthesizer/: config.py  main.py  service.py
services/safe-synthesizer/tests/: conftest.py  test_endpoints.py  test_jobs.py  test_jsonl_loader.py  test_logging.py  test_model_init.py  test_task_upload_results.py
services/safe-synthesizer/tests/integration/: test_model_init_integration.py  test_safe_synthesizer.py
services/safe-synthesizer/tests/notebooks/: test_nss_job.ipynb  test_nss_job_structured_gen.ipynb  test_nss_quant_unsloth.ipynb  womens-clothing-ecommerce.csv
(+3843 files in other folders)
