[project]
name = "nmp-customizer"
version = "0.0.1"
description = "Customizer service for NeMo Platform (v2 API)"
requires-python = ">=3.11,<3.14"

dependencies = [
    # API server dependencies (lightweight - for nmp-api/nmp-core containers)
    "fastapi[standard]>=0.115.4",
    "uvicorn[standard]>=0.12.0",
    "pydantic>=2.10.3",
    "pydantic-settings>=2.6.1",
    "nmp-common",
]

[project.optional-dependencies]
test = [
    "nmp-testing",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
customizer-server = "nmp.customizer.main:run_standalone"

[tool.uv.sources]
nmp-common = { workspace = true }
nmp-testing = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nmp"]

[dependency-groups]
# CPU task dependencies (for nmp-cpu-tasks container - file I/O tasks)
task = [
    "httpx>=0.27.0",
    "aiofiles>=24.1.0",
    "nmp-common",
]

dev = [
    "nmp-testing",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = [
    "unit: marks tests as unit tests",
    "e2e: marks tests as end-to-end tests",
    "integration: marks tests as integration tests",
    "regression: marks tests as regression tests",
    "canary: marks tests as canary tests",
    "slow: marks tests as slow-running tests",
    "skip_in_ci: marks tests to skip in CI environment",
    "nemo_rl: marks tests that require nemo-rl dependencies",
]
