[project]
name = "nmp-intake"
version = "0.0.1"
description = "Intake service for NeMo Platform - collecting, enriching, and triaging logs, entries, and events"
readme = "README.md"
requires-python = ">=3.11,<3.14"

classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    # API server dependencies (for nmp-api/nmp-core containers)
    # Intake has no separate task containers - all deps are API deps
    "fastapi>=0.115.5, <1.0.0",
    "uvicorn>=0.22.0, <1.0.0",
    "sqlalchemy>=2.0",
    "alembic>=1.10.4, <2.0.0",
    "pydantic>=2.9.2, <3.0.0",
    "pydantic-settings>=2.6.1, <3.0.0",
    "asyncpg>=0.30.0, <1.0.0",
    "python-dotenv>=1.0.0, <2.0.0",
    "httpx>=0.24.1, <1.0.0",
    "huggingface-hub>=1.0.1, <2.0.0",
    "openai>=1.51.0",
    "requests>=2.32.3, <3.0.0",
    "types-requests>=2.32.0.20241016, <3.0.0.0",
    "pyyaml>=6.0.2, <7.0.0",
    "base58>=2.1.1",
    "nmp-common",
    "opentelemetry-api>=1.27.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp>=1.27.0",
    "opentelemetry-instrumentation-openai>=0.33.9",
    "psycopg2-binary>=2.9.10",
    "celery>=5.5.3",
    "redis>=5.0.1",
    "flower>=2.0.1",
    "watchdog[watchmedo]>=6.0.0",
    "clickhouse-connect>=0.7,<1.0",
    "opentelemetry-proto>=1.27.0",
]

[project.scripts]
intake-server = "nmp.intake.main:run_standalone"

[dependency-groups]
# Intake has no separate task containers - all deps are in main dependencies

dev = [
    "nmp-testing",
    "psycopg[binary,pool]>=3.2.4",
    "psycopg2-binary>=2.9.10",
    "pytest-postgresql>=6.1.1, <7.0.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.21.0, <2.0.0",
    "pytest-env>=1.1.5, <2.0.0",
    "flake8>=6.1.0, <7.0.0",
    "isort>=5.12.0, <6.0.0",
    "mypy>=1.13.0, <2.0.0",
    "types-requests>=2.31.0, <3.0.0",
    "pre-commit>=3.7.1, <4.0.0",
    "setuptools>=78.1.1",
    "testcontainers[postgres]>=4.12.0",
    "testcontainers[clickhouse]>=4.12.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/nmp"]

[tool.uv.sources]
nmp-common = { workspace = true }
nmp-testing = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }]
