[project]
name = "nmp-safe-synthesizer"
version = "0.0.1"
description = "Safe Synthesizer service for NeMo Platform - privacy-preserving synthetic data generation."
readme = "README.md"
authors = [{ name = "NVIDIA", email = "nemo@nvidia.com" }]
requires-python = ">=3.11,<3.14"

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Human Machine Interfaces",
  "Topic :: Software Development",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

dependencies = [
  # API server dependencies (lightweight - for nmp-api/nmp-core containers)
  "fastapi>=0.115.8",
  "fsspec>=2024.10.0",
  "opentelemetry-distro>=0.41b",
  "opentelemetry-exporter-otlp>=1.22.0",
  "pydantic[email]>=2.9.2",
  "pydantic-settings>=2.2.1",
  "python-multipart~=0.0.9",
  "requests>=2.31.0",
  "uvicorn>=0.32.1",
  "httpx>=0.27.2",
  "gunicorn>=23.0.0",
  "nmp-common",
  # Base nemo-safe-synthesizer for config types (job config, results models) - external dependency
  # needed at service load time. Heavy ML deps are in optional extras [cpu]/[cu128].
  "nemo-safe-synthesizer",
]

[project.scripts]
safe-synthesizer-server = "nmp.safe_synthesizer.main:run_standalone"

[project.optional-dependencies]
# these are set up to provide a working mac and linux environment. we only use cuda on linux.
# this is required as the nemo-safe-synthesizer package (external dependency) needs the full cuda depset
# as it requires GPUs.
# in the root uv project, to include the nemo-safe-synthesizer package, you need to
# specify the extra `cu128` or `cpu` to get the deps like:
# `uv sync --all-packages --extra [cu128|cpu]`
cpu = [
    #  "nemo-safe-synthesizer[cpu, engine]; sys_platform=='linux'",
    #  "torch==2.10.0; sys_platform=='darwin'",
    #  "torch==2.10.0+cpu; sys_platform=='linux'",
    #  "torchvision==0.25.0+cpu; sys_platform=='linux'",
]
cu128 = [
    # "nemo-safe-synthesizer[cu128, engine]; sys_platform=='linux'",
    # "torch==2.10.0+cu128; sys_platform=='linux'",
    # "torchvision==0.25.0+cu128; sys_platform=='linux'",
    # "nvidia-cublas-cu12; sys_platform=='linux'",
    # "nvidia-cuda-cupti-cu12; sys_platform=='linux'",
    # "nvidia-cuda-nvrtc-cu12; sys_platform=='linux'",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nmp"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "session"
markers = [
    "e2e: E2E test",
    "integration: Integration test",
    "unit: Unit test",
    "skip_in_ci: Skip in CI",
    "slow: Slow test",
]

[dependency-groups]
# Minimal task dependencies (base for GPU tasks)
task = [
  "nmp-common",
]

dev = [
  "pre-commit>=3.8.0",
  "pydantic-settings>=2.6.1",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=6.0.0",
  "pytest>=8.3.3",
]

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }]
conflicts = [
    [{ extra = "cpu" }, { extra = "cu128" }],

]

[tool.uv.sources]
nmp-common = { workspace = true }
